Fixed alignment and styling of document creation and revision pages

--- a/Ui/src/main/resources/static/css/custom.css
+++ b/Ui/src/main/resources/static/css/custom.css
@@ -154,3 +154,12 @@ textarea {
     color: inherit;
     margin-bottom: 0;
 }
+
+.progress-thick {
+    height: 60px;
+}
+
+.progress-bar-plain {
+    background-color: #d1dade;
+    color: #5E5E5E;
+}
